removing bulk of tests and rails

--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -1,4 +1,4 @@
-<h1>Parking#check</h1>
+<h1>York Street, Ottawa</h1>
 
 <img src="//s3-us-west-1.amazonaws.com/york-parking-bucket/uploads/york.jpg">
 
