--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,38 @@
 
 <%= yield %>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- York OC Transpo -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2696960216219467"
+     data-ad-slot="7393187685"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- York OC Transpo -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2696960216219467"
+     data-ad-slot="7393187685"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- York OC Transpo -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2696960216219467"
+     data-ad-slot="7393187685"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 </html>
