--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -2,3 +2,4 @@
 
 <img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg">
 
+<a href="javascript:location.reload(true)">Refresh this page!</a>
