--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -1,4 +1,5 @@
-<h1>York Street, Ottawa</h1>
+<h1>York Street Shipping Yard, Ottawa</h1>
+<h2>(sea containers)
 
 
 <img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg">
