Add youtube embed

--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -2,6 +2,5 @@
 <h2>(sea containers)
 
 
-<img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6KNX4emkLSQ" frameborder="0" allowfullscreen></iframe>
 
-<h2><a href="javascript:location.reload(true)">Refresh this page!</a></h2>
