--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -1,5 +1,5 @@
 <h1>York Street Shipping Yard, Ottawa</h1>
 <h2>(sea containers)
 
-<img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg">
-<!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/6KNX4emkLSQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe> -->
+<!-- <img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg"> -->
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/6KNX4emkLSQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
