--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -2,4 +2,4 @@
 <h2>(sea containers)
 
 <!-- <img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg"> -->
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/6KNX4emkLSQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/live_stream?channel=UCl05NkKlllaVc_Ko4psPGGw&autoplay=1" frameborder="0" allowfullscreen></iframe>
