Change name of cameras

--- a/app/views/parking/check.html.erb
+++ b/app/views/parking/check.html.erb
@@ -1,5 +1,5 @@
-<h1>York Street Shipping Yard, Ottawa</h1>
-<h2>(sea containers)
+<h1>York Street, Ottawa</h1>
+<h2> Parking Wars, Live!
 
 <!-- <img src="//s3-us-west-2.amazonaws.com/york-parking/uploads/york.jpg"> -->
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/live_stream?channel=UCl05NkKlllaVc_Ko4psPGGw&autoplay=1" frameborder="0" allowfullscreen></iframe>
